--- a/css/dragAndDrop.css
+++ b/css/dragAndDrop.css
@@ -2,7 +2,7 @@ body{
 	background-color: #e6e6e6;
 }
 #content{
-	padding-top: 2%;
+	/*padding-top: 2%;*/
 }
 .sidebar{
 	width: 200px;
@@ -11,6 +11,7 @@ body{
 	overflow-y: scroll;
 	position: fixed;
 	z-index: 1;
+	top: 0;
 }
 .right-sidebar{
 	width: 0px;
@@ -20,6 +21,7 @@ body{
 	z-index: 1;
 	right: 0;
 	transition: width 1s;
+	top: 0;
 }
 .siderow{
 	margin-left: 5%;
@@ -56,19 +58,17 @@ body{
 .draggable {
   touch-action: none;
   user-select: none;
-  border: 1px solid #ccc;
+  margin-right: -5%;
+  /*border: 1px solid #ccc;*/
+}
+.dragg-p{
+	margin-right: unset !important;
 }
 .item{
 	position: relative;
 	list-style: none;
-	margin-top: 1%;
-	margin-bottom: 1%;
-}
-.draggable{
-	margin-right: -5%;
-}
-.dragg-p{
-	margin-right: unset !important;
+	/*margin-top: 1%;
+	margin-bottom: 1%;*/
 }
 .erase{
 	position: absolute;
@@ -112,4 +112,8 @@ body{
 }
 #edit-css{
 	margin-left: 35vh;
+}
+dl, ol, ul {
+	margin-top: 0;
+	margin-bottom: 0rem;
 }
